<resources>
    <string name="app_name">InstaPOS</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="reset_password">Reset password</string>
    <string name="sign_up_now">Sign up now</string>
    <string name="have_not_account_yet">Have not account yet?</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="required_field">Required field!</string>
    <string name="passwords_not_match">Password don\'t match each other!</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="add_post">Add Post</string>
    <string name="favorite">Favorite</string>
    <string name="profile">Profile</string>
</resources>