<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_outline_home_24"
        android:title="@string/home" />

    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/ic_outline_search_24"
        android:title="@string/search" />

    <item
        android:id="@+id/nav_add_post"
        android:icon="@drawable/ic_outline_add_box_24"
        android:title="@string/add_post" />

    <item
        android:id="@+id/nav_favorite"
        android:icon="@drawable/ic_baseline_favorite_border_24"
        android:title="@string/favorite" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_baseline_person_outline_24"
        android:title="@string/profile" />
</menu>