<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/abl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/actionBarColor"
            app:title="@string/sign_in"
            android:elevation="@dimen/margin_standard"
            app:titleTextColor="?attr/titleColor"/>
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/appLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tilEmail"
        android:layout_marginBottom="@dimen/margin_standard"
        android:text="@string/app_name"
        android:fontFamily="@font/billabong"
        android:textSize="48sp"
        android:textAlignment="center"
        android:textColor="?attr/titleColor" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="@dimen/margin_standard"
        app:boxCornerRadiusTopStart="@dimen/margin_standard"
        app:boxCornerRadiusTopEnd="@dimen/margin_standard"
        app:boxCornerRadiusBottomStart="@dimen/margin_standard"
        app:boxCornerRadiusBottomEnd="@dimen/margin_standard"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/email"
        app:layout_constraintVertical_bias="0.4">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tilEmail"
        android:layout_marginHorizontal="@dimen/margin_standard"
        android:layout_marginTop="@dimen/margin_standard"
        app:boxCornerRadiusTopStart="@dimen/margin_standard"
        app:boxCornerRadiusTopEnd="@dimen/margin_standard"
        app:boxCornerRadiusBottomStart="@dimen/margin_standard"
        app:boxCornerRadiusBottomEnd="@dimen/margin_standard"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignIn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_64"
        app:layout_constraintTop_toBottomOf="@id/tilPassword"
        android:layout_marginHorizontal="@dimen/margin_standard"
        android:layout_marginTop="@dimen/margin_standard"
        app:cornerRadius="@dimen/margin_standard"
        android:text="@string/sign_in"/>

    <TextView
        android:id="@+id/resetPasswordTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btnSignIn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_standard"
        android:text="@string/forgot_your_password"/>

    <TextView
        android:id="@+id/resetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintTop_toBottomOf="@id/resetPasswordTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/reset_password"
        android:textColor="#3F51B5"/>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?attr/dividerColor"
        app:layout_constraintBottom_toTopOf="@id/signUpTitle"
        android:layout_marginBottom="@dimen/margin_standard" />

    <TextView
        android:id="@+id/signUpTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/signUp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/have_not_account_yet"/>

    <TextView
        android:id="@+id/signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="@dimen/margin_standard"
        android:text="@string/sign_up_now"
        android:textColor="#3F51B5"/>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>